# operatio

./: .gitignore  README.md  main.mojo  mojoproject.toml  pyproject.toml
operatio/: _main.mojo  cli.mojo  extract.mojo  load.mojo  main.mojo  run.mojo  transform.mojo
pyoperatio/: main.py
pyoperatio/data/: safetensors_loader.py
pyoperatio/utils/: decorators.py  logger.py
