[tool.poetry]
name = "operatio"
version = "0.0.2"
description = ""
authors = ["teilomillet"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pixi.project]
channels = ["conda-forge", "https://conda.modular.com/max"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
operatio = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
max = ">=24.5.0,<25"
loguru = ">=0.7.2,<0.8"
safetensors = ">=0.4.5,<0.5"
transformers = ">=4.45.2,<5"
numpy = ">=1.26.4,<2"
huggingface_hub = ">=0.25.2,<0.26"
pytorch = ">=2.4.1,<3"
accelerate = ">=1.0.1,<2"
